--- a/index.html
+++ b/index.html
@@ -2,22 +2,293 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jjjumperrentals</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- bootstrap-css -->
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>jjjumperrentals</title>
+  <link rel="stylesheet" href="style.css">
 
+
+  <!-- BS CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+  <!-- font-awesome-pro -->
+  <link href="https://kit-pro.fontawesome.com/releases/v6.0.0/css/pro.min.css" rel="stylesheet">
+
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+
+
+  <!-- AOS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
 
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  <!-- header-start -->
+  <!-- nav-1 -->
+  <nav class="nav-1">
+    <div class="text-light d-flex justify-content-between align-items-center h-100 w-75 mx-auto">
+      <div class="d-flex gap-3">
+        <p>
+          <i class="fa-duotone fa-circle-phone"></i>
+          <strong>(404) 999-9978</strong>
+        </p>
+        <p>
+          <i class="fa-duotone fa-at"></i>
+          <strong>abcd1234@example.com</strong>
+        </p>
+      </div>
+      <div>
+        <p><strong>Follow us on:</strong>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-youtube"></i>
+          <i class="fa-brands fa-instagram"></i>
+        </p>
+
+      </div>
+    </div>
+
+
+  </nav>
+
+  <!-- nav-2 -->
+  <nav class="navbar navbar-expand-lg nav-2">
+    <div class="container-fluid w-75 mx-auto">
+      <a class="navbar-brand" href="#"><img src="./images/logo.jpeg" alt="" height="70" width="70"></a>
+      <button class="navbar-toggler" style="outline: 0;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+        aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarScroll">
+        <ul class="navbar-nav mx-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#"><strong>Home</strong></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"><strong>Inventory</strong></a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <strong>Delivery Areas</strong>
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Norco Parks</a></li>
+              <li><a class="dropdown-item" href="#">Chino Parks</a></li>
+              <li>
+              <li><a class="dropdown-item" href="#">Chino Hills City Parks</a></li>
+              <li>
+              <li><a class="dropdown-item" href="#">CORONA PARKS</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">See Locations On Map</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disa"><strong>About</strong></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disa"><strong>Contact</strong></a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="search-btn">
+            <i class="fa-duotone fa-magnifying-glass"></i>
+          </button>
+        </form>
+      </div>
+    </div>
+  </nav>
+
+  <header>
+    <!-- Banner Start -->
+    <section class="banner">
+      <div class="banner-cont  w-75 mx-auto h-100">
+        <div id="carouselExampleIndicators" class="carousel slide h-100" data-bs-ride="true">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner h-100">
+            <div class="carousel-item active h-100">
+              <div class="d-flex align-items-center justify-content-between h-100">
+                <div class="w-50 text-light" data-aos="zoom-in"
+                data-aos-duration="2000">
+                  <h1>
+                    JUMPERS
+                  </h1>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, harum adipisci. Nisi ut omnis,
+                    repellendus asperiores voluptatem beatae, eveniet excepturi, tenetur obcaecati quaerat fugit
+                    expedita.
+                  </p>
+                </div>
+                <div data-aos="fade-down" data-aos-duration="2000">
+                  <img src="./images/house-2.png" height="400" width="400" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex align-items-center justify-content-between h-100">
+                <div class="w-50 text-light">
+                  <h1>
+                    Water Sliders
+                  </h1>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, harum adipisci. Nisi ut omnis,
+                    repellendus asperiores voluptatem beatae, eveniet excepturi, tenetur obcaecati quaerat fugit
+                    expedita.
+                  </p>
+                </div>
+                <div>
+                  <img src="./images/waterSlide.png" height="400" width="400" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex align-items-center justify-content-between h-100">
+                <div class="w-50 text-light">
+                  <h1>
+                    Concessions
+                  </h1>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, harum adipisci. Nisi ut omnis,
+                    repellendus asperiores voluptatem beatae, eveniet excepturi, tenetur obcaecati quaerat fugit
+                    expedita.
+                  </p>
+                </div>
+                <div>
+                  <img src="./images/Concessions.png" height="400" width="400" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </section>
+    <!-- Banner End -->
+  </header>
+
+  <!-- main start -->
+  <main class="w-75 mx-auto">
+    <h1 class="text-center" style="font-family: 'Abril Fatface', cursive;color: rgb(92, 89, 89);
+    ">
+      OUR PRODUCTS
+    </h1>
+    <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center position-relative" style="border-top:2px dashed #008C99 ; width: 25%;margin-block: 30px;">
+        <i class="fa-duotone fa-teddy-bear" style="position:absolute ;top: -20px; font-size: 30px;color: #008C99;"></i>
+      </div>
+    </div>
+    <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4">
+      <div class="col">
+        <div class="card border-0 pt-5 shadow-lg rounded" data-aos="fade-left" data-aos-duration="1000">
+          <div class="w-50 mx-auto">
+            <img src="./images/jumper-animated-edit2.png" class="card-img-top"  alt="...">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title text-center">Jumpers</h5>
+            <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card border-0 pt-5 shadow-lg rounded" data-aos="fade-up" data-aos-duration="1000">
+          <div class="w-50 mx-auto">
+            <img src="./images/waterSlide-animated-edit.png" class="card-img-top"  alt="...">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title text-center">Water Slides</h5>
+            <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card border-0 pt-5 shadow-lg rounded" data-aos="fade-right" data-aos-duration="1000">
+          <div class="w-50 mx-auto">
+            <img src="./images/combo-animated.png" class="card-img-top"  alt="...">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title text-center">Combo</h5>
+            <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card border-0 pt-5 shadow-lg rounded" data-aos="fade-right" data-aos-duration="1000">
+          <div class="w-50 mx-auto">
+            <img src="./images/slushyMaker-edit.png" class="card-img-top"  alt="...">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title text-center">Concessions</h5>
+            <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card border-0 pt-5 shadow-lg rounded" data-aos="fade-down" data-aos-duration="1000">
+          <div class="w-50 mx-auto">
+            <img src="./images/tent-edit.png" class="card-img-top"  alt="...">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title text-center">Appliances</h5>
+            <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card border-0 pt-5 shadow-lg rounded" data-aos="fade-left" data-aos-duration="1000">
+          <div class="w-50 mx-auto">
+            <img src="./images/jenga-edit.png" class="card-img-top"  alt="...">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title text-center">Kid's Games</h5>
+            <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      
+    </div>
+  </main>
+  <!-- main end -->
+
+
+
+
+
+
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+  <!-- AOS JS -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 
 </body>
 
